# tsrc-cli

./: .gitignore  LICENSE.md  README.md  pyproject.toml
experiments/: create_user.py
tests/: test_create_user.py
tests/e2e/: e2e.py
tsrc_cli/: cli.py
tsrc_cli/lib/: create_repo.py  create_user.py  get_repo.py  get_tsrcid.py  get_tsrckey.py  get_user.py  get_user_by_name.py  vote_repo.py
tsrc_cli/lib/blockchain/: __init__.py  blockchain.py
tsrc_cli/lib/utilities/: tx_utility.py  utility.py
