[tool.poetry]
name = "tsrc_cli"
version = "0.1.0"
description = "A brief description of your CLI application"
authors = ["7db9a"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Add your dependencies here
# requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[tool.poetry.scripts]
my-cli-app = 'tsrc_cli.cli:main'

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
