[tool.poetry]
name = "tsrc_cli"
version = "0.1.0"
description = "A brief description of your CLI application"
authors = ["7db9a"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
click = "^8.1.7"
py-algorand-sdk = "2.5.0"
#py-algorand-sdk = {version = "2.5.0", source = "pypi"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[tool.poetry.scripts]
tsrc-cli = 'tsrc_cli.cli:main'

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
